basicamente nada, só import

--- a/trab.ipynb
+++ b/trab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,9 @@
    "source": [
     "from lib.training import train\n",
     "from lib.data import get_data_chest_x_ray_image\n",
-    "from lib.utils import get_device"
+    "from lib.utils import get_device\n",
+    "from torch import nn \n",
+    "import torch.optim as opt"
    ]
   },
   {
@@ -127,11 +129,8 @@
    "outputs": [],
    "source": [
     "from lib.models import MyResnet18\n",
-    "from torch import nn \n",
-    "import torch.optim as opt\n",
     "\n",
     "n_classes = len(data_dict['classes'])\n",
-    "\n",
     "metrics = get_my_metrics(device, n_classes)\n",
     "\n",
     "resnet18_config = ExperimentConfig(\n",
