fazer os itens da todo list

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
-1 - fazer framework de treinamento, não criar rede customizada agora, testar primeiro na resnet18, que demora menos pra treinar
+1 - gráfico de mean e std dos modelos nos fols
+2 - testar todos os modelos treinados no outro dataset (chexpert)
+3 - ver se é facil treinar filtrar somente as classes normal e pneumonia
