comentando código e preparando versão final do notebook

--- a/trab.ipynb
+++ b/trab.ipynb
@@ -32,6 +32,9 @@
    "outputs": [],
    "source": [
     "class ExperimentConfig:\n",
+    "    '''\n",
+    "    Classe que define as configurações de um experimento\n",
+    "    '''\n",
     "    def __init__(self, name, model_fn, loss_fn, optimizer_fn, class_map=None, idx_to_class=None):\n",
     "        self.name = name\n",
     "        self.model_fn = model_fn\n",
@@ -58,6 +61,10 @@
     "    return checkpoint['model_state_dict']\n",
     "\n",
     "def generate_stat_dataframe(path_to_history : dict, save_name, device):\n",
+    "    '''\n",
+    "    Recebe o path para o local dos checkpoints (de todos os folds) do modelo e junta todos os histories em um dataframe.\n",
+    "    '''\n",
+    "    \n",
     "    import torch\n",
     "    from collections import defaultdict\n",
     "    import pandas as pd\n",
@@ -88,6 +95,10 @@
     "    return results_df\n",
     "\n",
     "def get_fold_of_best_model(results_df: pd.DataFrame, best_by='val_f1_score', best_by_mode='max'):\n",
+    "    '''\n",
+    "    Retorna os melhor modelo de acordo com os resultados do histório de treinamento presente no `results_df`.\n",
+    "    '''\n",
+    "    \n",
     "    if best_by_mode == \"max\":\n",
     "        best_idx = results_df[best_by].idxmax()\n",
     "    elif best_by_mode == 'min':\n",
@@ -98,6 +109,9 @@
     "    return selected_fold\n",
     "\n",
     "def prepare_dataloaders(*datasets, batch_size=64, shuffle=True):\n",
+    "    '''\n",
+    "    Recebe um número variável de datasets e retorna uma lista de dataloaders desses datasets na mesma ordem de entrada.\n",
+    "    '''\n",
     "    num_workers = max(1, os.cpu_count() - 1)\n",
     "    dataloader_list = []\n",
     "    for dataset in datasets:\n",
@@ -112,6 +126,9 @@
     "    return dataloader_list\n",
     "\n",
     "def get_my_metrics(device, n_classes=2, task='multiclass'):\n",
+    "    '''\n",
+    "    Constroi a coleção de métricas que vai ser usada nos experimentos.\n",
+    "    '''\n",
     "    import torchmetrics\n",
     "    from lib.metrics import MetricCollection\n",
     "\n",
@@ -136,13 +153,21 @@
     "\n",
     "### target_class --> 0, others --> 1\n",
     "def get_binary_class_mapping_dict(old_id2class_map : dict, target_label):\n",
+    "    '''\n",
+    "    Recebe um dicionário com vários id's mapeados para os labels e retorna um dicionário em que mapeia os id's que não são iguais ao do target label par 0 \n",
+    "    e que são iguais para 1\n",
+    "    '''\n",
+    "    \n",
     "    old_idx_to_new_idx = {k:(1 if target_label!= v else 0) for k,v in old_id2class_map.items()}\n",
     "    new_idx_to_class = {0: target_label, 1 : f'not-{target_label}'}\n",
     "    return old_idx_to_new_idx, new_idx_to_class\n",
     "    \n",
     "\n",
     "def generate_fold_plots(results_df: pd.DataFrame, target_columns, title, save_path=None, highlight=None):\n",
-    "    \n",
+    "    '''\n",
+    "    Função usada para gerar as curvas de loss dos modelos\n",
+    "    '''\n",
+    "\n",
     "    for fold in results_df['fold'].unique().tolist():\n",
     "        fold_slice = results_df[results_df['fold'] == fold].reset_index(drop=True)\n",
     "        column_values = [fold_slice[tc].tolist() for tc in target_columns]\n",
@@ -175,10 +200,16 @@
     "    return \n",
     "\n",
     "def get_fold_number_from_path(path):\n",
+    "    '''\n",
+    "    Extrai o número do fold presente no nome do path\n",
+    "    '''\n",
     "    prefix, ext = os.path.splitext(path)\n",
     "    return int(prefix.split('fold=')[-1])\n",
     "\n",
     "def test_folds_on_test(path_to_models, test_dataset, model_builder, device, idx_to_class_map, experiment_path=None, images_path=None):\n",
+    "    '''\n",
+    "    Testa todos os melhores modelos de cada fold no dataset de teste, reportando o classfication report e matriz de confusão.\n",
+    "    '''\n",
     "    \n",
     "    cp_paths = os.listdir(path_to_models)\n",
     "    cp_paths = [os.path.join(path_to_models, x) for x in cp_paths if ('.pt' in x) and ('best' in x)] ## filtering desirable file type\n",
@@ -217,6 +248,12 @@
     "        \n",
     "\n",
     "def experiment(config : ExperimentConfig, data_dict, device, metrics, freeze=False, epochs=30, warmup=5, patience=10, mode='train', best_by='val_f1_score', best_by_mode='max'):\n",
+    "    '''\n",
+    "    Função que define um experimento.\n",
+    "    mode=train --> Treina vários modelos utilizando folds já construídos previamente e passados pelo data_dict salvando checkpoints para os melhores modelos de cada fold e o checkpoint ao final do treino.\n",
+    "    mode=results --> Gera confusion matrix, dataframe de resultados e plot de curvas de loss (loss de validação e treino) para todos os folds.\n",
+    "    mode=train+results --> executa sequencialmente os dois modos descritos anteriormente, na mesma ordem.\n",
+    "    '''\n",
     "    \n",
     "    save_path = f'experiments/{config.name}_folder'\n",
     "    images_path = os.path.join(save_path, 'images/')\n",
@@ -272,45 +309,8 @@
     "        print('Evaluating Folds on test dataset...')\n",
     "        test_dataset = data_dict['test_dataset']\n",
     "        idx_to_class = data_dict['idx_to_class']\n",
+    "        \n",
     "        test_folds_on_test(save_path, test_dataset, config.model_fn, device, idx_to_class, save_path, images_path)\n",
-    "        \n",
-    "        '''\n",
-    "        ## selecting the fold with best performance\n",
-    "        selected_fold = get_fold_of_best_model(results_df, best_by=best_by, best_by_mode=best_by_mode)\n",
-    "        print(f'Best model generated at folder `{selected_fold}`')\n",
-    "        \n",
-    "        ## loading best model of the selected fold\n",
-    "        fold_model_path = os.path.join(save_path, f'best_{config.name}_fold={selected_fold}.pt')\n",
-    "        print(f'Loading model `{fold_model_path}`')\n",
-    "        \n",
-    "        model_state = load_only_model_state(fold_model_path, device)       \n",
-    "        model = config.model_fn().to(device=device)\n",
-    "        model.load_state_dict(model_state)\n",
-    "        \n",
-    "        ### test dataset already has the transformations applied\n",
-    "        test_dataset = data_dict['test_dataset']\n",
-    "        test_dataloader = prepare_dataloaders(test_dataset)[0] ## returns a list\n",
-    "        y_true, y_pred = eval(model, test_dataloader, device, task='multiclass')\n",
-    "        \n",
-    "        ## classification report\n",
-    "        print(\"Classification Report:\")\n",
-    "        ### check if a custom map was passed into config\n",
-    "        idx_to_class_map = config.idx_to_class if config.idx_to_class else data_dict['idx_to_class']\n",
-    "        target_names = [idx_to_class_map[i] for i in sorted(idx_to_class_map.keys())]\n",
-    "        report_dict = classification_report(y_true, y_pred, target_names=target_names, output_dict=True)\n",
-    "        classification_report_path = os.path.join(save_path,'classification_report.csv')\n",
-    "        \n",
-    "        report_df = pd.DataFrame(report_dict)\n",
-    "        print(report_df)\n",
-    "        report_df.to_csv(classification_report_path)\n",
-    "\n",
-    "\n",
-    "        ## confusion matrix\n",
-    "        print('Confusion Matrix:') \n",
-    "        cm_save_path = os.path.join(images_path, f'confusion_matrix.png')\n",
-    "        plot_confusion_matrix(y_true, y_pred, class_map=idx_to_class_map, save_path=cm_save_path)\n",
-    "        \n",
-    "        '''\n",
     "        \n",
     "    else:\n",
     "        raise ValueError(f'mode `{mode}` is not valid')"
@@ -322,28 +322,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dict = get_data_chest_x_ray_image(img_size=(224, 224), kfold=5)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data_dict = get_data_chest_x_ray_image(img_size=(224, 224), kfold=5)  \n",
     "n_classes = len(data_dict['classes'])\n",
-    "metrics = get_my_metrics(device, n_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics = get_my_metrics(device, n_classes=n_classes, task='multiclass')\n",
-    "binary_metrics = get_my_metrics(device, n_classes=2, task='binary')\n",
-    "old_idx_to_new_idx, new_idx_to_class = get_binary_class_mapping_dict(data_dict['idx_to_class'], target_label='PNEUMONIA')"
+    "metrics = get_my_metrics(device, n_classes=n_classes, task='multiclass')  "
    ]
   },
   {
@@ -358,7 +339,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet18_config, data_dict, device, binary_metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(resnet18_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
     "\n",
     "del resnet18_config\n",
     "torch.cuda.empty_cache()\n",
@@ -378,7 +359,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet18_freeze_config, data_dict, device, binary_metrics, freeze=True, epochs=50, mode='results')\n",
+    "experiment(resnet18_freeze_config, data_dict, device, metrics, freeze=True, epochs=50, mode='results')\n",
     "\n",
     "del resnet18_freeze_config\n",
     "torch.cuda.empty_cache()\n",
@@ -397,7 +378,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet34_config, data_dict, device, binary_metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(resnet34_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
     "\n",
     "del resnet34_config\n",
     "torch.cuda.empty_cache()\n",
@@ -417,7 +398,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet34_freeze_config, data_dict, device, binary_metrics, freeze=True, epochs=50, mode='results')\n",
+    "experiment(resnet34_freeze_config, data_dict, device, metrics, freeze=True, epochs=50, mode='results')\n",
     "\n",
     "del resnet34_freeze_config\n",
     "torch.cuda.empty_cache()\n",
@@ -436,7 +417,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(mobilenet_v2_config, data_dict, device, binary_metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(mobilenet_v2_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
     "\n",
     "del mobilenet_v2_config\n",
     "torch.cuda.empty_cache()\n",
@@ -455,7 +436,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(mobilenet_v3_large_config, data_dict, device, binary_metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(mobilenet_v3_large_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
     "\n",
     "del mobilenet_v3_large_config\n",
     "torch.cuda.empty_cache()\n",
@@ -474,7 +455,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(densenet121_config, data_dict, device, binary_metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(densenet121_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
     "\n",
     "del densenet121_config\n",
     "torch.cuda.empty_cache()\n",
@@ -493,7 +474,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(densenet161_config, data_dict, device, binary_metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(densenet161_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
     "\n",
     "del densenet161_config\n",
     "torch.cuda.empty_cache()\n",
@@ -512,7 +493,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(vit_b_16_config, data_dict, device, binary_metrics, freeze=False, epochs=100, mode='results')\n",
+    "experiment(vit_b_16_config, data_dict, device, metrics, freeze=False, epochs=100, mode='results')\n",
     "\n",
     "del vit_b_16_config\n",
     "torch.cuda.empty_cache()\n",
@@ -527,15 +508,20 @@
    "source": [
     "from tqdm import tqdm\n",
     "import os\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "from autorank import autorank, create_report, plot_stats\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "def friedman_test_and_posthoc_nemenyi(experimentpath_modelname_list: list[str], target_column='val_f1_score', alpha=0.05, save_path=None, save_name=\"cd_diagram.png\"):\n",
-    "    import os\n",
-    "    import pandas as pd\n",
-    "    from autorank import autorank, create_report, plot_stats\n",
-    "    import matplotlib.pyplot as plt\n",
-    "\n",
+    "    '''\n",
+    "    Recebe uma lista de tuplas, onde cada tupla é o path do dataframe de resultados dos folds do modelo e o nome do modelo para ser usado nos plots e tabelas\n",
+    "    Executa o teste de friedman para os modelos e, caso ocorra um indicativo de diferença estatística é feito o teste posthoc nemenyi para os pares dos modelos \n",
+    "    E a criação de um plot de Critical Difference dos modelos. (usa a biblioteca autorank)\n",
+    "    Para o teste de Friedman, usa a métrica especificada em target_column e se analisa o máximo para essa métrica. No caso default, os modelos são comparados\n",
+    "    pelo máximo do valor do f1 score macro no dataset de validação para cada fold.\n",
+    "    '''\n",
+    "    \n",
     "    friedman_data_df = pd.DataFrame()\n",
     "    model_name_list = []  # manter ordem\n",
     "\n",
@@ -570,6 +556,10 @@
     "    save_path=None, \n",
     "    save_name='models_fold_comparison'\n",
     "):\n",
+    "    '''\n",
+    "    Função não é mais utilizada\n",
+    "    '''\n",
+    "    \n",
     "    stats_list = []\n",
     "    \n",
     "    for experiment_path, model_name in experimentpath_modelname_list:\n",
@@ -600,6 +590,12 @@
     "\n",
     "\n",
     "def generate_dataset_comparison_dataframe(model, test_dataset, model_classes, dataset_classes, device, save_path=None, save_name='dataset_comparison'):\n",
+    "    '''\n",
+    "    Testa um modelo em um conjunto de teste e cria um dataframe de comparação entre o que o modelo chutou com as classes do outro dataset.\n",
+    "    Se o mesmo dataset em que o modelo foi treinado for passado, o dataframe corresponde a uma matriz de confução.\n",
+    "    Ex.: se o modelo classicou uma amostra como classe A, e classe no dataset passado a amostra é X, um `hit` é considerado, e o par (A, X) é incrementado.\n",
+    "    '''\n",
+    "    \n",
     "    test_dataloader = prepare_dataloaders(test_dataset, batch_size=64, shuffle=True)[0]   \n",
     "     \n",
     "    y_true, y_pred = eval(model, test_dataloader, device=device, task='multiclass')\n",
@@ -618,8 +614,8 @@
     "    comparison_df.columns = dataset_classes\n",
     "    \n",
     "    if save_path:\n",
-    "        full_save_path = os.path.join(save_path, f'{save_name}.parquet')\n",
-    "        comparison_df.to_parquet(full_save_path)\n",
+    "        full_save_path = os.path.join(save_path, f'{save_name}.csv')\n",
+    "        comparison_df.to_csv(full_save_path)\n",
     "    return comparison_df\n",
     "\n"
    ]
@@ -718,34 +714,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_comparison = generate_models_fold_comparison(experimentpath_modelname_list, ['val_loss'] ,'./')\n",
+    "## Melhor modelo foi mobilenet v2 e é o que será testado no outro dataset\n",
     "\n",
-    "metric_mask = models_comparison['metric'] == 'val_loss'\n",
-    "fold_mask = models_comparison['fold'] == 1\n",
-    "\n",
-    "models_comparison[fold_mask & metric_mask][['model', 'mean', 'std']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "chexpert_dict = get_chexpert()\n",
-    "chest_x_ray_dict = get_data_chest_x_ray_image()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "chest_x_ray_dict = get_data_chest_x_ray_image()\n",
+    "\n",
     "path_to_mobilenet_v2 = 'experiments/mobilenet_v2_folder/'\n",
-    "results_path = os.path.join(path_to_mobilenet_v2, 'mobilenet_v2_results.parquet')\n",
-    "mobilenet_v2_results = pd.read_parquet(results_path)\n",
+    "results_path = os.path.join(path_to_mobilenet_v2, 'mobilenet_v2_results.csv')\n",
+    "mobilenet_v2_results = pd.read_csv(results_path)\n",
+    "\n",
+    "## Selecionando melhor modelo entre os melhores modelos de cada fold para o teste.\n",
     "fold = get_fold_of_best_model(mobilenet_v2_results, best_by='val_f1_score', best_by_mode='max')\n",
+    "\n",
     "mobilenet_v2_str = 'mobilenet_v2'\n",
     "checkpoint_path = os.path.join(path_to_mobilenet_v2, f'best_{mobilenet_v2_str}_fold={fold}.pt')"
    ]
@@ -754,8 +734,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "## Carregando modelo \n",
     "model_state = load_only_model_state(checkpoint_path, device)\n",
     "mobilenet_v2_model = MyMobileNet(mobilenet_version=mobilenet_v2_str, n_classes=3).to(device)\n",
     "mobilenet_v2_model.load_state_dict(model_state)"
@@ -767,8 +759,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Testando na outra base\n",
     "dataset_comparison_df = generate_dataset_comparison_dataframe(mobilenet_v2_model, chexpert_dict['train_dataset'], chest_x_ray_dict['classes'],\n",
-    "                                      chexpert_dict['classes'], device, './', 'dataset_comparison.parquet')"
+    "                                      chexpert_dict['classes'], device, './', 'dataset_comparison')"
    ]
   },
   {
