colocando train+results nas chamadas de experiment

--- a/trab.ipynb
+++ b/trab.ipynb
@@ -339,7 +339,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet18_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(resnet18_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
     "\n",
     "del resnet18_config\n",
     "torch.cuda.empty_cache()\n",
@@ -359,7 +359,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet18_freeze_config, data_dict, device, metrics, freeze=True, epochs=50, mode='results')\n",
+    "experiment(resnet18_freeze_config, data_dict, device, metrics, freeze=True, epochs=50, mode='train+results')\n",
     "\n",
     "del resnet18_freeze_config\n",
     "torch.cuda.empty_cache()\n",
@@ -378,7 +378,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet34_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(resnet34_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
     "\n",
     "del resnet34_config\n",
     "torch.cuda.empty_cache()\n",
@@ -398,7 +398,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet34_freeze_config, data_dict, device, metrics, freeze=True, epochs=50, mode='results')\n",
+    "experiment(resnet34_freeze_config, data_dict, device, metrics, freeze=True, epochs=50, mode='train+results')\n",
     "\n",
     "del resnet34_freeze_config\n",
     "torch.cuda.empty_cache()\n",
@@ -417,7 +417,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(mobilenet_v2_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(mobilenet_v2_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
     "\n",
     "del mobilenet_v2_config\n",
     "torch.cuda.empty_cache()\n",
@@ -436,7 +436,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(mobilenet_v3_large_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(mobilenet_v3_large_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
     "\n",
     "del mobilenet_v3_large_config\n",
     "torch.cuda.empty_cache()\n",
@@ -455,7 +455,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(densenet121_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(densenet121_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
     "\n",
     "del densenet121_config\n",
     "torch.cuda.empty_cache()\n",
@@ -474,7 +474,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(densenet161_config, data_dict, device, metrics, freeze=False, epochs=50, mode='results')\n",
+    "experiment(densenet161_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
     "\n",
     "del densenet161_config\n",
     "torch.cuda.empty_cache()\n",
@@ -487,13 +487,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Única rede treinada com 100 épocas, já que nos treinamentos era possível perceber que a rede não tinha convergido com 50 épocas.\n",
     "vit_b_16_config = ExperimentConfig(\n",
     "    name=\"vit_b_16\",\n",
     "    model_fn=lambda: MyViT(vit_version='vit_b_16', n_classes=3),\n",
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(vit_b_16_config, data_dict, device, metrics, freeze=False, epochs=100, mode='results')\n",
+    "experiment(vit_b_16_config, data_dict, device, metrics, freeze=False, epochs=100, mode='train+results')\n",
     "\n",
     "del vit_b_16_config\n",
     "torch.cuda.empty_cache()\n",
