--- a/trab.ipynb
+++ b/trab.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/matheusmartin/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/matheusmartin/Desktop/teste/2025-1-P2-classificador-CheXpert/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet18_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
+    "experiment(resnet18_config, data_dict, device, metrics, freeze=False, epochs=3, mode='train+results')\n",
     "\n",
     "del resnet18_config\n",
     "torch.cuda.empty_cache()\n",
@@ -1166,7 +1166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
