versão final do código

--- a/trab.ipynb
+++ b/trab.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,15 +121,14 @@
     "    '''\n",
     "    Recebe um número variável de datasets e retorna uma lista de dataloaders desses datasets na mesma ordem de entrada.\n",
     "    '''\n",
-    "    num_workers = max(1, os.cpu_count() - 1)\n",
+    "    #num_workers = max(1, os.cpu_count() - 1)\n",
     "    dataloader_list = []\n",
     "    for dataset in datasets:\n",
     "        new_dataloader = DataLoader(\n",
     "            dataset,\n",
     "            batch_size=batch_size,\n",
     "            shuffle=shuffle,\n",
-    "            num_workers=num_workers,\n",
-    "            pin_memory=True\n",
+    "            pin_memory=True,\n",
     "        )\n",
     "        dataloader_list.append(new_dataloader)\n",
     "    return dataloader_list\n",
@@ -348,7 +347,7 @@
     "    loss_fn=lambda: nn.CrossEntropyLoss(),\n",
     "    optimizer_fn=lambda params: opt.Adam(params, lr=1e-3),\n",
     "    )      \n",
-    "experiment(resnet18_config, data_dict, device, metrics, freeze=False, epochs=3, mode='train+results')\n",
+    "experiment(resnet18_config, data_dict, device, metrics, freeze=False, epochs=50, mode='train+results')\n",
     "\n",
     "del resnet18_config\n",
     "torch.cuda.empty_cache()\n",
